--- a/index.html
+++ b/index.html
@@ -15,15 +15,29 @@
     <div class="container-fluid">
         <div class="products">
             <div class="row justify-content-center">
-                <h1 class="col-sm text-center">Nos produits</h1>
+                <h1 class="col-sm text-center mb-4">Nos produits</h1>
             </div>
 
             <div class="row justify-content-center" href="#">
-                <h2 class="col-sm text-center">Plantes d'intérieur</h2>
+                <h2 class="col-sm text-center mb-4">Plantes d'intérieur</h2>
             </div>
             <div class="row justify-content-center" id="housePlant">
                 <div class="col-sm-2 mx-2">
-                    <div class="card">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="card-text">15€</p>
+                                </div>
+                                <div class="col"><a href="#" class="card-link">Panier</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <h3 class="card-title text-center">Amaranthus</h3>
                             <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -33,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2 mx-2">
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <h3 class="card-title text-center">Amaranthus</h3>
                             <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -43,17 +57,7 @@
                     </div>
                 </div>
                 <div class="col-sm-2 mx-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title text-center">Amaranthus</h3>
-                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
-                            <p class="card-text">15€</p>
-                            <a href="#" class="card-link">Panier</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-2 mx-2">
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-body">
                             <h3 class="card-title text-center">Amaranthus</h3>
                             <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -65,23 +69,95 @@
             </div>
 
             <div class="row justify-content-center" href="#">
-                <h2 class="col-sm text-center">Plantes d'extérieur</h2>
+                <h2 class="col-sm text-center mb-4">Plantes d'extérieur</h2>
             </div>
             <div class="row justify-content-center" id="outdoorPlant">
-                <div class="col-sm-2 mx-2">a</div>
-                <div class="col-sm-2 mx-2">b</div>
-                <div class="col-sm-2 mx-2">c</div>
-                <div class="col-sm-2 mx-2">d</div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row justify-content-center" href="#">
-                <h2 class="col-sm text-center">Semences</h2>
+                <h2 class="col-sm text-center mb-4">Semences</h2>
             </div>
             <div class="row justify-content-center" id="seeds">
-                <div class="col-sm-2 mx-2">a</div>
-                <div class="col-sm-2 mx-2">b</div>
-                <div class="col-sm-2 mx-2">c</div>
-                <div class="col-sm-2 mx-2">d</div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mx-2">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h3 class="card-title text-center">Amaranthus</h3>
+                            <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
+                            <p class="card-text">15€</p>
+                            <a href="#" class="card-link">Panier</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
