--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="row justify-content-center" id="housePlant">
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -219,7 +219,7 @@
                 </div>
                 <div class="row justify-content-center" id="housePlant">
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -267,7 +267,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -324,7 +324,7 @@
                 </div>
                 <div class="row justify-content-center" id="housePlant">
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -348,7 +348,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                     <div class="col-sm-2">
-                        <div class="card mx-2 mb-4">
+                        <div class="card mb-4">
                             <div class="card-body">
                                 <h3 class="card-title text-center">Amaranthus</h3>
                                 <img class="card-img-top" src="assets/img/bouquet.jpg" alt="Bouquet de fleurs séchées">
