maj navbar et footer cristina - reste logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
         <!--navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="navbar-toggler-icon"></div>
@@ -27,11 +27,11 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#plantesInt">Plantes d'intérieur</a>
                     </li>
-                    <li class="nav-item active" id="plantesExt">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#plantesExt">Plantes d'extérieur</a>
                     </li>
-                    <li class="nav-item active" id="semences">
-                        <a class="nav-link" href="#semences">Bouquets de fleurs séchées</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#bouquetsdefleursseches">Bouquets de fleurs séchées</a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +80,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- Scroll to top -->
         <div id="scrollTop"></div>
@@ -138,7 +137,6 @@
             </div>
         </div>
 
-
         <!-- Catégorie Produits -->
         <div class="products">
             <div class="row justify-content-center">
@@ -160,8 +158,8 @@
                                         <span class="card-text">15 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="" class="card-link article" data-ref="ref. 123"
-                                            data-name="Roger" data-price="15">
+                                        <a href="" class="card-link article" data-ref="ref. 123" data-name="Roger"
+                                            data-price="15">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -180,8 +178,8 @@
                                         <span class="card-text">12.50 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 456"
-                                            data-name="Josette" data-price="12.5">
+                                        <a href="#" class="card-link article" data-ref="ref. 456" data-name="Josette"
+                                            data-price="12.5">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -200,8 +198,8 @@
                                         <span class="card-text">20 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 789"
-                                            data-name="Antoine" data-price="20">
+                                        <a href="#" class="card-link article" data-ref="ref. 789" data-name="Antoine"
+                                            data-price="20">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -220,8 +218,8 @@
                                         <span class="card-text">15 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 112"
-                                            data-name="Mireille" data-price="15">
+                                        <a href="#" class="card-link article" data-ref="ref. 112" data-name="Mireille"
+                                            data-price="15">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -248,8 +246,8 @@
                                         <span class="card-text">4.99 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="" class="card-link article" data-ref="ref. 345"
-                                            data-name="Solange" data-price="4.99">
+                                        <a href="" class="card-link article" data-ref="ref. 345" data-name="Solange"
+                                            data-price="4.99">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -288,8 +286,8 @@
                                         <span class="card-text">20 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 901"
-                                            data-name="Laurette" data-price="20">
+                                        <a href="#" class="card-link article" data-ref="ref. 901" data-name="Laurette"
+                                            data-price="20">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -307,8 +305,8 @@
                                         <span class="card-text">11.5 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 2234"
-                                            data-name="René" data-price="11.5">
+                                        <a href="#" class="card-link article" data-ref="ref. 2234" data-name="René"
+                                            data-price="11.5">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -335,8 +333,8 @@
                                         <span class="card-text">5.99 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="" class="card-link article" data-ref="ref. 2567"
-                                            data-name="Lionel" data-price="5.99">
+                                        <a href="" class="card-link article" data-ref="ref. 2567" data-name="Lionel"
+                                            data-price="5.99">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -354,8 +352,8 @@
                                         <span class="card-text">6.99 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 2890"
-                                            data-name="Pamela" data-price="6.99">
+                                        <a href="#" class="card-link article" data-ref="ref. 2890" data-name="Pamela"
+                                            data-price="6.99">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -373,8 +371,8 @@
                                         <span class="card-text">10 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 3123"
-                                            data-name="Louis" data-price="10">
+                                        <a href="#" class="card-link article" data-ref="ref. 3123" data-name="Louis"
+                                            data-price="10">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -392,8 +390,8 @@
                                         <span class="card-text">15 €</span>
                                     </div>
                                     <div class="col text-right mt-3">
-                                        <a href="#" class="card-link article" data-ref="ref. 3456"
-                                            data-name="Hélène" data-price="15">
+                                        <a href="#" class="card-link article" data-ref="ref. 3456" data-name="Hélène"
+                                            data-price="15">
                                             <i class="fas fa-cart-plus fa-lg"></i>
                                         </a>
                                     </div>
@@ -405,7 +403,23 @@
             </section>
 
         </div>
+        <!-- Bannière  -->
+        <div class="col-lg-10 col-md-8 col-sm-8 col-8 mx-auto mt-4">
+            <div class="row justify-content-between text-center">
+                <div class="iconesLastSecond center"><img src="assets/img/bestLogo.png">
+                    <p>Excellente qualité</p></img>
+                </div>
+                <div class="iconesLastFirst center">
+                    <p></p>
+                    <img src="assets/img/livraisonLogo.png">
+                    <p>Livraison gratuite à partir de 50€</p></img>
+                </div>
+                <div class="iconesLast center"><img src="assets/img/sav.jpg">
+                    <p>Meilleur SAV</p></img>
+                </div>
 
+            </div>
+        </div>
         <!-- Footer -->
         <footer class="footer">
             <div class="row">
